[package]
authors = ["Jia Ye <planet0104@gmail.com>"]
edition = "2021"
name = "rp2040-st7735-demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embedded-hal = "1"
fugit = "0.3.7"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
embedded-graphics = "0.7"
st7735-lcd = "0.8.0"
libm = "0.2.8"

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true
